protocols/tests/snapshots/protocols__typecheck__tests__mul_invalid.snap
---
source: protocols/src/typecheck.rs
expression: content
---
warning: Inferred RHS type as u32 from LHS type u32.
   ┌─ tests/multipliers/mul_invalid.prot:19:3
   │
19 │   dut.a := X;
   │   ^^^^^^^^^^^ Inferred RHS type as u32 from LHS type u32.

warning: Inferred RHS type as u32 from LHS type u32.
   ┌─ tests/multipliers/mul_invalid.prot:20:3
   │
20 │   dut.b := X;
   │   ^^^^^^^^^^^ Inferred RHS type as u32 from LHS type u32.

error: Expected s to be a struct's input field,
                but s is not a field of a struct
   ┌─ tests/multipliers/mul_invalid.prot:22:3
   │
22 │   s := dut.s;
   │   ^^^^^^^^^^^ Expected s to be a struct's input field,
                but s is not a field of a struct
